P3/test/pl0/error/error1.pl0
const a:=2;

begin
end.
